# math-app

./: .env  .env.debug  .gitignore  LICENSE  cargo.toml  readme.md
application/: Cargo.toml
application/src/: env.rs  lib.rs
domain/: Cargo.toml
domain/src/: lib.rs  questioner.rs
domain/src/expression/: constant_weights.rs  mod.rs  operator.rs  operator_weights.rs  options.rs  term.rs
migrations/: 20240929122045_questioner.sql
persistance/: Cargo.toml
persistance/migrations/: 20240929122045_questioner.sql
persistance/src/: lib.rs  questioner.rs
presentation/: package-lock.json  package.json  tsconfig.json
presentation/src/: app.html  button.svelte
presentation/src-tauri/: Cargo.toml  tauri.conf.json
presentation/src-tauri/src/: lib.rs  main.rs
presentation/src-tauri/src/commands/: create_questioner.rs  get_equation.rs  get_settings.rs  get_stats.rs  mod.rs
presentation/src/icons/: fire.svelte  star.svelte
presentation/src/routes/: +layout.ts  +page.svelte  +page.ts
presentation/src/routes/questioner/: +page.svelte
presentation/src/stores/: contdown.ts
