[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"