[package]
name = "persistance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

async-trait = "0.1"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "derive",
    "time",
    "uuid",
] }

tokio = { version = "1", features = ["full"] }
